Fix some z-index clashes with dropdowns

--- a/hsreplaynet/static/styles/base.scss
+++ b/hsreplaynet/static/styles/base.scss
@@ -66,7 +66,7 @@ body, html {
 	height: 17px;
 }
 
-.navbar {
+header .navbar {
 	z-index: 100;
 }
 
